css/style.css
html{
  min-width: 450px;
  font-family: 'Verdana', sans-serif !important;
}

.infographics-wrap{
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: absolute;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: #74beb3;
}

.fl-box{
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 50%;
  overflow: hidden;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  transition: top 300ms, left 300ms, width 300ms, height 300ms, background 300ms ease-in 300ms, opacity 200ms;
}

.sl-box{
  overflow: hidden;
}

.fl-box h1,
.sl-box h1{
  font-size: 2.5rem;
  text-align: left;
  color: #ffffff;
}

.fl-box h2,
.sl-box h2{
  color: #ffffff;
  font-size: 2rem;
  margin-bottom: 0;
  margin-top: 0;
}

.fl-box img{
  cursor: pointer;
  height: 50%;
}

.fb2 img {
  height: 30%;
}

.fb1{
  background-color: #74beb3;
}

.fb2{
  background-color: #5eada1;
}


/****************** MODAL *******************/

.sl-modal{
  display: none;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 200;
  opacity: 0;
  transition: all 200ms ease-in;
}

.sl-box{
  display: flex;
  align-items: center;
  width: 100%;
  height: 25%;
  padding: 2rem;
  box-sizing: border-box;
  transition: all 200ms ease-in
}

.slb1{
  align-items: baseline;
  text-align: right!important;
  background-color: #9dc9c4;
  background-image: url(../images/qm.svg);
  background-position: left 10% bottom 40%;
  background-repeat: no-repeat;
  background-size: 60px;
}

.slb2{
  background-color: #74beb3;
}

.slb3{
  background-color: #56aa9e;
}

.slb4{
  background-color: #519a91;
}

.slb2 img{
  height: 90px;
  margin-right: 12px;
}

.slb3 img{
  height: 90px;
  margin-right: 12px;
}

.slb4 img{
  height: 50px;
  margin-right: 12px;
}

.d-modal{
  display: none;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 200;
  background-color: #74beb3;
  opacity: 0;
  transition: all 200ms ease-in;
}

.modal-close{
  display: block;
  position: absolute;
  top: 8px;
  right: 8px;
  color: #fff;
  font-family: 'Verdana', sans-serif;
  cursor: pointer;
}

.modal-close img{
  vertical-align: bottom;
}

.modal-close span {
  font-size: 20px;
  line-height: 26px;
}

.l-img{
  display: block;
  position: absolute;
  left: 0;
  transform: translate(-50%);
  height: 100%;
  opacity: 0.4;
  z-index: -5;
}

.d-modal-contents{
  display: flex;
  flex-direction: column;
  margin: 5% 10%;
  color: #ffffff
}

.d-modal-contents h2 {
  font-size: 3rem;
  margin-bottom: 20px;
}

.d-modal-contents .incubation-container{
  display: flex;
  padding: 12px;
  background: #5fa197;
}

.incubation-container div{
  margin: 0 0 0 8px;
}

.incubation-container span{
  font-size: 1.3rem;
}

.incubation-container h3{
  font-size: 2.3rem;
  margin: 0;
}

.incubation-container img{
  height: 70px;
}

.d-modal-contents .symlist-container{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  margin-top: 12px;
  padding: 30px 12px;
  background: #60a197;
}


.symlist-container img{
  height: 70px;
  margin-bottom: 12px;
}

.symlist-container div{
  display: flex;
  flex-direction: column;
  width: 50%;
  text-align: center;
  margin-bottom: 20px;
}

.symlist-container strong{
  font-size: 1.4rem;
}



/****** Transform *********/

.fl-box-closed,
.sl-box-closed{
  height: 0;
  padding: 0;
  opacity: 0;
}

.opacity-0{
  opacity: 0;
}

.opacity-1{
  opacity: 1;
}

.d-none{
  display: none;
}

.d-block{
  display: block;
}

.d-flex{
  display: flex;
}

.sl-modal-inn{
  display: flex;
  flex-direction: column;
}

.sl-box-inn{
  height: 100%;
  width: 100%;
}


/******** TEMP **************/
.fb2:hover, .slb3:hover, .slb4:hover {
  filter: grayscale(1) brightness(1.15);
}

